--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,15 @@ repositories {
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-integration'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.integration:spring-integration-http'
-//    implementation 'org.springframework.integration:spring-integration-jpa'
-    implementation 'org.springframework.integration:spring-integration-file'
+    implementation 'org.springframework.integration:spring-integration-jpa'
+    implementation 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    implementation 'com.h2database:h2'
+//    implementation 'org.springframework.integration:spring-integration-file'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.integration:spring-integration-test'
